--- a/Portfolio-Styles.css
+++ b/Portfolio-Styles.css
@@ -120,11 +120,31 @@ h2 {
 
 /*Mobile styling for navigation bar.*/
 
-@media only screen and (max-width: 520px) {
+@media only screen and (max-width: 480px) {
     #navbar {
         justify-content: center;
     }
     .nav-list {
         width: 100%;
+    }
+    #welcome-section {
+        width: 100%;
+        height: 100vh;
+    }
+    #about-me {
+        width: 100%;
+        height: 100%;
+    }
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+    #image {
+        grid-column: 1 / -1;
+        padding: 0 80px;
+        width: 480px;
+    }
+    #auto-bio {
+        grid-column: 1 / -1;
     }
 }
