--- a/Portfolio-Styles.css
+++ b/Portfolio-Styles.css
@@ -118,9 +118,31 @@ h2 {
     text-align: center;
 }
 
-/*Mobile styling for navigation bar.*/
+/*The beginning of projects section styling.*/
 
-@media only screen and (max-width: 480px) {
+#projects {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background-color: var(--mosaic-blue);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h3 {
+    font-size: 4rem;
+    text-decoration: underline;
+    color: var(--inkwell-color);
+}
+
+.project-tile {
+    width: 90%;
+}
+
+/*Mobile styling.*/
+
+@media only screen and (max-width: 520px) {
     #navbar {
         justify-content: center;
     }
