--- a/Portfolio-Styles.css
+++ b/Portfolio-Styles.css
@@ -48,12 +48,12 @@ li {
     font-size: 2.5rem;
 }
 
-a {
+#nav-link {
     text-decoration: none;
     color: var(--inkwell-color);
 }
 
-a:hover {
+#nav-link:hover {
     cursor: pointer;
     color: var(--cerulean-color);
 }
@@ -136,23 +136,155 @@ h3 {
     color: var(--inkwell-color);
 }
 
-.project-tile {
+.grid {
     width: 90%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    gap: 1rem;
+}
+
+.project-tile {
+    width: 100%;
+    height: 450px;
+    background-color: var(--inkwell-color);
+}
+
+#tile {
+    width: 100%;
+    height: 100%;
+    color: var(--inkwell-color);
+    text-decoration: none;
+}
+
+#tile:hover {
+    cursor: pointer;
+    color: var(--french-blue);
+}
+
+#penguin {
+    width: 100%;
+    height: 400px;
+}
+
+h4 {
+    width: 100%;
+    height: 50px;
+    background-color: var(--ultimate-gray);
+    margin: 0;
+    text-align: center;
+    font-size: 3rem;
+    padding-top: 5px;
+}
+
+.message {
+    grid-column: 3 / 5;
+    font-size: 3rem;
+    text-align: center;
+    color: var(--inkwell-color);
+    font-style: italic;
+}
+
+/*The beginning of contact section.*/
+
+#contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background-color: var(--ultimate-gray);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h5 {
+    font-size: 5rem;
+    margin: 40px 0;
+    color: var(--french-blue);
+}
+
+#outro {
+    font-size: 2.5rem;
+    color: var(--inkwell-color);
+    font-style: italic;
+}
+
+.social-icons {
+    display: flex;
+    width: 60%;
+    height: 40%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.icon {
+    font-size: 5rem;
+    text-decoration: none;
+}
+
+.icon:hover {
+    cursor: pointer;
+    color: var(--inkwell-color);
+}
+
+.gmail {
+    color: var(--french-blue);
+}
+
+.m {
+    font-size: 4rem;
+    color: red;
+}
+
+.a {
+    font-size: 4rem;
+    color: orange;
+}
+
+.i {
+    font-size: 4rem;
+    color: var(--french-blue);
+}
+
+.l {
+    font-size: 4rem;
+    color: green;
+}
+
+.discord {
+    color: #191970;
+}
+
+.text2 {
+    font-size: 4rem;
+    color: var(--french-blue);
+}
+
+.github {
+    color: black;
+}
+
+.text3 {
+    font-size: 4rem;
+    color: var(--navy-blazer);
 }
 
 /*Mobile styling.*/
 
 @media only screen and (max-width: 520px) {
+    /*Start of navbar.*/
     #navbar {
         justify-content: center;
     }
     .nav-list {
         width: 100%;
     }
+    /*Start of welcome section.*/
     #welcome-section {
         width: 100%;
         height: 100vh;
     }
+    /*Start of about me section.*/
     #about-me {
         width: 100%;
         height: 100%;
@@ -168,5 +300,31 @@ h3 {
     }
     #auto-bio {
         grid-column: 1 / -1;
+    }
+    /*Start of projects section.*/
+    h3 {
+        margin: 10px 0;
+    }
+    .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        height: 100%;
+    }
+    .project-tile {
+        grid-column: 1 / -1;
+        height: 100%;
+    }
+    #penguin {
+        height: 402px;
+    }
+    .message {
+        grid-column: 1 / -1;
+        margin: 0;
+    }
+    /*Start of contact section.*/
+    .social-icons {
+        flex-direction: column;
+        justify-content: space-between;
+        height: 50%;
     }
 }
