--- a/Portfolio-Styles.css
+++ b/Portfolio-Styles.css
@@ -269,9 +269,148 @@ h5 {
     color: var(--navy-blazer);
 }
 
+/*Width for 1550px.*/
+
+@media (max-width: 1550px) {
+    /*Start of navbar styling.*/
+    .nav-list {
+        width: 100%;
+    }
+    /*Start of about me styling.*/
+    .grid-container{
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+    #image {
+        grid-column: 1 / 3;
+    }
+    /*Start of projects styling.*/
+    .project-tile {
+        grid-column: 1 / 3;
+    }
+    /*Start of contact styling.*/
+    .social-icons {
+        width: 100%;
+    }
+}
+
+/*Desktops, large screens.*/
+
+@media (max-width: 1200px) {
+    /*Start of navbar styling.*/
+    .nav-list {
+        width: 100%;
+    }
+    /*Start of about me styling.*/
+    .grid-container {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    #image {
+        grid-column: 1 / 3;
+    }
+    #auto-bio {
+        grid-column: 3 / 5;
+    }
+    /*Start of projects styling.*/
+    .project-tile {
+        grid-column: 1 / 3;
+    }
+    /*Start of contact styling.*/
+    .social-icons {
+        width: 100%;
+    }
+}
+
+/*Small screens, laptops.*/
+
+@media (max-width: 1024px) {
+    /*Start of navbar styling.*/
+    .nav-list {
+        width: 100%;
+    }
+    /*Start of about me section.*/
+    h2 {
+        margin: 20px 0;
+    }
+    .grid-container {
+        width: 100%;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-rows: minmax(450px, 500px);
+    }
+    #image {
+        max-height: 100%;
+        grid-column: 1 / 2;
+    }
+    #auto-bio {
+        grid-column: 2 / 4;
+        margin: 0;
+        font-size: 2.5rem;
+    }
+    /*Start of projects styling.*/
+    h3 {
+        margin: 20px 0;
+    }
+    .project-tile {
+        max-height: 100%;
+        grid-column: 1 / 3;
+    }
+    #penguin {
+        height: 398px;
+    }
+    /*Start of contact styling.*/
+    .social-icons {
+        width: 100%;
+    }
+}
+
+/*iPads and other tablets styling.*/
+
+@media (max-width: 768px) {
+    /*Start of navbar styling.*/
+    .nav-list {
+        width: 100%;
+    }
+    /*Start of about me styling.*/
+    h2 {
+        margin: 42px 0 10px;
+    }
+    .grid-container {
+        width: 100%;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-rows: minmax(450px, 500px);
+    }
+    #image {
+        max-height: 100%;
+        grid-column: 1 / 2;
+    } 
+    #auto-bio {
+        grid-column: 2 / 3;
+        margin: 0;
+        font-size: 2.5rem; 
+    }
+    /*Start of projects styling.*/
+    h3 {
+        margin: 10px 0;
+    }
+    .grid {
+        width: 100%;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+    .project-tile {
+        grid-column: 1 / 2;
+    }
+    .message {
+        grid-column: 2 / 3;
+    }
+    /*Start of contact styling.*/
+    .social-icons {
+        width: 100%;
+        height: 40%;
+    }
+}
+
 /*Mobile styling.*/
 
-@media only screen and (max-width: 520px) {
+@media (max-width: 480px) {
     /*Start of navbar.*/
     #navbar {
         justify-content: center;
@@ -285,37 +424,35 @@ h5 {
         height: 100vh;
     }
     /*Start of about me section.*/
-    #about-me {
-        width: 100%;
-        height: 100%;
+    h2 {
+        margin: 10px 0;
     }
     .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        width: 100%;
+        grid-template-columns: minmax(350px, 480px);
+        grid-template-rows: minmax(200px, 280px);
     }
-    #image {
-        grid-column: 1 / -1;
-        padding: 0 80px;
-        width: 480px;
+    #image { 
+        grid-column: 1 / 2;
+        margin: 0 160px;
     }
     #auto-bio {
-        grid-column: 1 / -1;
+        grid-column: 1 / 2;
+        font-size: 2rem; 
     }
     /*Start of projects section.*/
     h3 {
-        margin: 10px 0;
+        margin: 0;
     }
     .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        height: 100%;
+        grid-template-columns: minmax(350px, 480px);
+        grid-template-rows: minmax(250px, 380px);
     }
     .project-tile {
+        max-height: 100%;
         grid-column: 1 / -1;
-        height: 100%;
     }
     #penguin {
-        height: 402px;
+        height: 328px;
     }
     .message {
         grid-column: 1 / -1;
