--- a/Portfolio-Styles.css
+++ b/Portfolio-Styles.css
@@ -40,7 +40,7 @@ body {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    width: 25%;
+    width: 30%;
     justify-content: space-around;
 }
 
@@ -116,6 +116,60 @@ h2 {
     color: var(--navy-blazer);
     line-height: 1.5;
     text-align: center;
+}
+
+/*The beginning of certification section.*/
+
+#certification {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--french-blue);
+}
+
+h6 {
+    font-size: 4rem;
+    text-decoration: underline;
+    color: var(--inkwell-color);
+}
+
+.certs-info {
+    font-size: 3rem;
+    color: var(--navy-blazer);
+}
+
+.certs-info-link {
+    color: var(--navy-blazer);
+    text-decoration: none;
+}
+
+.certs-info-link:hover {
+    cursor: pointer;
+    color: var(--cerulean-color);
+}
+
+.certs-container {
+    display: flex;
+    width: 50%;
+    align-items: center;
+}
+
+.certs {
+    width: 100%;
+    display: grid;
+}
+
+.c1 {
+    color: var(--inkwell-color);
+    text-decoration: none;
+}
+
+.c1:hover {
+    cursor: pointer;
+    color: var(--cerulean-color);
 }
 
 /*The beginning of projects section styling.*/
@@ -310,6 +364,13 @@ h5 {
     #auto-bio {
         grid-column: 3 / 5;
     }
+    /*Start of certification styling.*/
+    h6 {
+        margin: 10px 0;
+    }
+    .certs-info {
+        text-align: center;
+    }
     /*Start of projects styling.*/
     .project-tile {
         grid-column: 1 / 3;
@@ -345,6 +406,14 @@ h5 {
         margin: 0;
         font-size: 2.5rem;
     }
+    /*Start of certification styling.*/
+    h6 {
+        margin: 10px 0;
+    }
+    .certs-info {
+        text-align: center;
+        width: 90%;
+    }
     /*Start of projects styling.*/
     h3 {
         margin: 20px 0;
@@ -376,7 +445,7 @@ h5 {
     .grid-container {
         width: 100%;
         grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-template-rows: minmax(450px, 500px);
+        grid-template-rows: minmax(380px, 500px);
     }
     #image {
         max-height: 100%;
@@ -386,6 +455,13 @@ h5 {
         grid-column: 2 / 3;
         margin: 0;
         font-size: 2.5rem; 
+    }
+    /*Start of certification styling.*/
+    h6 {
+        margin: 10px 0;
+    }
+    .certs-info {
+        text-align: center;
     }
     /*Start of projects styling.*/
     h3 {
@@ -408,6 +484,13 @@ h5 {
     }
 }
 
+@media (max-width: 600px) {
+    /*Start of projects styling.*/
+    h4 {
+        font-size: 2.5rem;
+    }
+}
+
 /*Mobile styling.*/
 
 @media (max-width: 480px) {
@@ -417,6 +500,9 @@ h5 {
     }
     .nav-list {
         width: 100%;
+    }
+    .nav-items {
+        font-size: 2rem;
     }
     /*Start of welcome section.*/
     #welcome-section {
@@ -438,6 +524,13 @@ h5 {
     #auto-bio {
         grid-column: 1 / 2;
         font-size: 2rem; 
+    }
+    /*Start of certification styling.*/
+    h6 {
+        margin: 0;
+    }
+    .certs-info {
+        text-align: center;
     }
     /*Start of projects section.*/
     h3 {
@@ -463,5 +556,39 @@ h5 {
         flex-direction: column;
         justify-content: space-between;
         height: 50%;
+    }
+}
+
+@media (orientation: landscape) and (max-width: 600px) {
+    /*Start of about me styling.*/
+    .grid-container {
+        height: 380px;
+    }
+    #auto-bio {
+        font-size: 2rem;
+    }
+    /*Start of certification styling.*/
+    h6 {
+        margin: 10px 0;
+    }
+    .certs-info {
+        text-align: center;
+    }
+    /*Start of projects styling.*/
+    .grid {
+        height: 350px;
+    }
+    .project-tile {
+        height: 350px;
+    }
+
+    #penguin {
+        height: 300px;
+    }
+    h4 {
+        font-size: 2.5rem;
+    }
+    .message {
+        margin: 0;
     }
 }
